[package]
name = "glc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.174"
serde_derive = "1.0.174"
serde_json = "1.0.103"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9.25"
prettytable-rs = "0.10.0"
colored = "2.0.4"
anyhow = "1.0.72"
regex = "1.9.1"
zip = "0.6.6"
parse_duration = "2.1.1"
chrono = { version = "0.4.26", features = ["serde"]}
futures = "0.3.28"
strip-ansi-escapes = "0.2.0"
clap = { version = "4.4.8", features = ["derive"] }
itertools = "0.12.0"
